<?xml version="1.0"?>
<package>
  <name>gtsam_catkin</name>
  <version>0.0.0</version>
  <description>The gtsam_catkin package</description>

  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>
</package>
